base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: static
    app.kubernetes.io/component: static
    app.kubernetes.io/instance: static
  name: static
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: static
    weight: null
status: {}
